--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,13 +58,13 @@
                 android:layout_marginTop="50dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="email / usernamme"
                     android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                     android:drawablePadding="10dp"
-                    android:id="@+id/username"
-                    android:maxLines="1"/>
+                    android:hint="Usernamme"
+                    android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -72,13 +72,14 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="password"
                     android:drawableLeft="@drawable/ic_lock_black_24dp"
                     android:drawablePadding="10dp"
-                    android:id="@+id/password"
-                    android:maxLines="1"/>
+                    android:hint="Password"
+                    android:maxLines="1"
+                    android:password="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
